# morningfocus

./: .gitignore  CLAUDE.md  spec  vercel.json
morningfocus/: .env.example  notify.py  plan.md  pyproject.toml
morningfocus-web/: .env.example  pyproject.toml  requirements.txt
morningfocus-web/api/: index.py
morningfocus-web/app/: auth.py  crud.py  database.py  main.py  models.py  parser.py  schemas.py
morningfocus-web/static/: index.html  login.html
morningfocus/morningfocus/: __init__.py  briefing.py  cli.py  config.py  exceptions.py  models.py  parser.py  storage.py
morningfocus/tests/: conftest.py  test_briefing.py  test_cli.py  test_parser.py  test_storage.py
openspec/: config.yaml
openspec/changes/web-ui-improvements/: design.md  proposal.md  tasks.md
openspec/changes/web-ui-improvements/specs/briefing-view/: spec.md
openspec/changes/web-ui-improvements/specs/task-due-date/: spec.md
openspec/changes/web-ui-improvements/specs/task-priority-filter/: spec.md
